# text-extractor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: plan.md
.github/workflows/: release.yml
scripts/: build-installer.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: capture.rs  lib.rs  main.rs  ocr.rs
