[package]
name = "text-extractor"
version = "0.1.0"
description = "Cross-platform screen text extractor"
edition = "2021"
rust-version = "1.77"

[lib]
name = "text_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xcap = "0.9"
tesseract = "0.15"
image = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
